Fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@
 
 .grid-item > img {
   display: block;
-  width: 80%;
+  width: 100%;
 }
 
 #warm {
